--- a/css/mem.css
+++ b/css/mem.css
@@ -1,12 +1,58 @@
 body {
-  background-color: #3F51B5;
+  background-color: #085B0D;
+}
+
+header {
+  position: fixed;
+  height: 10em;
+  top: 0px;
+  right: 0px;
+  left: 0px;
+}
+
+.title {
+  margin-top: 1em;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  color: white;
+  font-family: 'Michroma', sans-serif;
+  font-size: 2em;
+}
+
+.logo {
+  position: relative;
+  font-family: untitled-font-1;
+  color: white;
+  font-size: 1em;
+  padding-top: 10%;
+}
+.lifebar {
+  padding-top: 7em;
+  width: 85%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.hearts {
+  font-family: untitled-font-1;
+  font-color: white;
+  float: left;
+  color: white;
+}
+
+.timer {
+  float: right;
+  color: white;
+  font-family: 'Michroma', sans-serif;
 }
 
 .gridbox {
-  padding-top: 5em;
-  width: 80%;
+  padding-top: 2em;
+  width: 90%;
   margin-right: auto;
   margin-left: auto;
+  text-align: center;
 }
 
 .memtile {
@@ -14,11 +60,11 @@ body {
   box-sizing: border-box;
   min-width: 75px;
   min-height: 75px;
-  max-width: 150px;
-  max-height: 150px;
+  max-width: 160px;
+  max-height: 160px;
   width: 16%;
-  padding-bottom: 13.5%;
-  margin-top: .5%;
+  padding-bottom: 14%;
+  margin-top: 3px;
   border-radius: 5%;
   position: relative;
 }
@@ -30,14 +76,16 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: #4A894D;
   border-radius: 5%
 }
 
 .icon {
   position: absolute;
-  margin-top: 42%;
-  margin-left: 43%;
+  width: 100%;
+  padding-top: 45%;
+  display: block;
+  text-align: center;
   font-family: untitled-font-1;
   font-size: 1.4em;
   color: #E5E5E5;
@@ -53,4 +101,52 @@ body {
 
 input[type=checkbox]:checked + .tile-style .icon {
     opacity: 1;
+}
+
+.landing-box {
+  position: relative;
+}
+
+.welcome-box {
+  padding-top: 5em;
+  box-sizing: border-box;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  color: white;
+  font-family: 'Michroma', sans-serif;
+  font-size: 2.5em;
+  line-height: 1.5em;
+}
+
+.welcome-box p {
+  font-size: .7em;
+}
+
+.welcome-box a {
+  display: block;
+  margin-top: 1em;
+  text-decoration: none;
+  color: white;
+  font-size: .5em;
+  border: 4px solid;
+  border-color: white;
+  width: 100%;
+}
+
+.welcome-box a:hover {
+  background-color: white;
+  color: #085B0D;
+}
+
+.easy {
+  transform: perspective(200px) rotateY(15deg);
+  float: left;
+
+}
+
+.hard {
+  transform: perspective(200px) rotateY(-15deg);
+  float: right;
 }
