--- a/css/mem.css
+++ b/css/mem.css
@@ -3,8 +3,6 @@ body {
 }
 
 header {
-  position: fixed;
-  height: 10em;
   top: 0px;
   right: 0px;
   left: 0px;
@@ -29,7 +27,7 @@ header {
   padding-top: 10%;
 }
 .lifebar {
-  padding-top: 7em;
+  padding-top: 3em;
   width: 85%;
   margin-right: auto;
   margin-left: auto;
@@ -53,6 +51,7 @@ header {
   margin-right: auto;
   margin-left: auto;
   text-align: center;
+  padding-bottom: 1em;
 }
 
 .memtile {
@@ -69,6 +68,23 @@ header {
   position: relative;
 }
 
+@media screen and (max-width: 600px){
+
+.memtile {
+  display: inline-block;
+  box-sizing: border-box;
+  min-width: 75px;
+  min-height: 75px;
+  max-width: 160px;
+  max-height: 160px;
+  width: 30%;
+  padding-bottom: 25%;
+  margin-top: 3px;
+  border-radius: 5%;
+  position: relative;
+}
+}
+
 .tile-style {
   top: 1px;
   box-sizing: border-box;
@@ -80,6 +96,19 @@ header {
   border-radius: 5%
 }
 
+@media screen and (max-width: 600px) {
+
+.tile-style {
+  top: 1px;
+  box-sizing: border-box;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #black;
+  border-radius: 5%
+}
+}
 .icon {
   position: absolute;
   width: 100%;
